# ginchat/docs/swagger.yaml
@@ -88,6 +88,61 @@ paths:
       summary: List Users
       tags:
       - 用户服务
+  /user/searchUserByNameAndPassword:
+    post:
+      description: get a user messages from database
+      parameters:
+      - description: 用户名
+        in: formData
+        name: name
+        required: true
+        type: string
+      - description: 密码
+        in: formData
+        name: password
+        required: true
+        type: string
+      responses:
+        "200":
+          description: message", "data"}
+          schema:
+            type: string
+      summary: Get User message by name and password
+      tags:
+      - 用户服务
+  /user/updateUser:
+    post:
+      description: Update user message in database
+      parameters:
+      - description: 用户id
+        in: formData
+        name: id
+        required: true
+        type: integer
+      - description: 用户名
+        in: formData
+        name: name
+        type: string
+      - description: 密码
+        in: formData
+        name: password
+        type: string
+      - description: 电话号码
+        in: formData
+        name: phone
+        type: string
+      - description: 邮箱
+        in: formData
+        name: email
+        type: string
+      responses:
+        "200":
+          description: message"}
+          schema:
+            type: string
+      summary: Update user message
+      tags:
+      - 更新用户信息
 securityDefinitions:
   BasicAuth:
     type: basic
